# nnet

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  compile_flags.txt
cmake/: nnetConfig.cmake.in
examples/: CMakeLists.txt
examples/mlp_xor/: CMakeLists.txt  main.c
include/nnet/: nnet.h
include/nnet/core/: activations.h  losses.h  utils.h
include/nnet/data/: data.h
include/nnet/layers/: dense.h
include/nnet/network/: sequential.h
include/nnet/training/: trainer.h
src/core/: activations.c  losses.c  utils.c
src/data/: data.c
src/layers/: dense.c
src/network/: sequential.c
src/training/: trainer.c
